dev/myapp-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: springapp-ingress
  labels:
    app: springapp
spec:
  rules:
    - host: springapp.kbaenak.tech
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: springapp-service
                port:
                  number: 8000
